fixed alt text and contrast on funfact text

--- a/style.css
+++ b/style.css
@@ -920,7 +920,7 @@ box-shadow: 0px 4px 10px 0px #999999;
 
 .facts-container p{
   color: white;
-  font-size: larger;
+  font-size:x-large;
 }
 
 .mainbrain-h1{
